# TULIP

./: LICENSE  README.md  example_config.toml  pyproject.toml
data/datasets/classification/CIFAR10/: configuration.py  dataset.py
data/datasets/classification/CIFAR100/: configuration.py  dataset.py
data/datasets/classification/CIFAR100C/: configuration.py
data/datasets/classification/CIFAR10C/: configuration.py
data/datasets/classification/CURETSR/: configuration.py
data/datasets/classification/MEDMNIST/: configuration.py  dataset.py  utils.py
data/datasets/classification/MNIST/: configuration.py  dataset.py
data/datasets/classification/SVHN/: configuration.py  dataset.py
data/datasets/shared/: utils.py
models/: architectures.py
models/classification/: resnet.py  sdnresnet_sngp.py  sngp.py  spectralresnet.py
models/classification/sngpnorm/: __init__.py  spectral_norm_conv.py
models/segmentation/deeplabv3/: aspp.py  decoder.py  deeplab.py  encoder_decoder.py
training/classification/: classificationtracker.py  run.py  test.py  trainer.py
training/segmentation/: evaluator.py  run.py  segmentationtracker.py  trainer.py  utils.py
uspecanalysis/: classification.py  segmentation.py
uspecanalysis/utils/: classificationtracker.py  segmentationtracker.py
visualization/auroc/: gen_scores.py  plot_curves.py
visualization/classification/: plot_acc.py  plot_auroc.py  plot_mi.py  plot_surface.py  visualizer.py
visualization/uncertainty/: common.py  entropy.py  sdn.py  sngp.py
visualization/utils/: distances.py  plotting.py
(+15 files in other folders)
